# gdep

./: .gitignore  Cargo.toml  README.md
src/: config.rs  errors.rs  main.rs
