[package]
name = "gdep"
authors = ["MOBSkuchen"]
description = "Git-deploy - Easily deploy & auto-update apps"
license = "MIT"
readme = "README.md"
version = "0.1.3"
edition = "2021"
keywords = ["deployment", "git"]
repository = "https://github.com/MOBSkuchen/gdep"
homepage = "https://crates.io/crates/gdep"

[dependencies]
git2 = "0.20.0"
clap = { version = "4.5.28", features = ["derive"] }
yaml-rust2 = "0.9.0"
run_script = "0.11.0"
